--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "cron": "^1.5.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.13",
+    "mongoose-version": "^1.1.0",
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
